--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 
     <script>
       //Your web app's Firebase configuration
-
+      const firebaseConfig = {
+  apiKey: "AIzaSyBtIaiTPOHLL2JjT5UvL0OnhP0LoVXOchk",
+  authDomain: "car-racing-game-f9102.firebaseapp.com",
+  databaseURL: "https://car-racing-game-f9102.firebaseio.com",
+  projectId: "car-racing-game-f9102",
+  storageBucket: "car-racing-game-f9102.appspot.com",
+  messagingSenderId: "46580688608",
+  appId: "1:46580688608:web:f03096cbd8d8a3e93bd285"
+};
       // // Initialize Firebase
       // firebase.initializeApp(firebaseConfig);
 
